Changelog
=========


2.0.5 (unreleased)
------------------

- Implements start date validation in the ResolveConiditions.
  Issue #1546 DI-KSA: Fehlermeldung beim Versuch "Dossier abschliessen"
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1546
  [phgross]

- Issue #1512 Auswahl exportieren: Sortieren nach Ablagenr. funktioniert nicht
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1512
  Dossier reporter: Added filing number filing column.

- Rebuild the document creation in templatedossier:
  Create a new doc obj instead of copying it, this set also the default values.
  [phgross]

- Added some adjustments in the resolving process:
  - Made recursive_resolve safe, can hanlde now allready resolved sbudossiers.
  - Made reactivate possible for subdossier if the maindossier is still open.
  - Adjust recursive_resolving of subdossie: overwrite the end date only when its not valid or none.
  [phgross]

- Issue #1512 Auswahl exportieren: Sortieren nach Ablagenr. funktioniert nicht
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1512
  Dossier reporter: Added encoding transform for the title attribute.
  [phgross]

- Fix attachment-fail when downloading file with IE.
  #1515 Mail-Anhang kann nicht geöffnet werden im Internet Explorer
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1515/
  [eschmutz]

- Implement some adjustments on the templatedossier:
  - Made docs in templatedossiers editable.
  - Activate trash-tab and trashing alos in the templatedossiers.
  Issue #1368 Bearbeitung von Vorlagen (Metadaten und Dokumente)
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1368
  [phgross]

- Set the response contenttype correctly, to avoid problems with diazo themes on remote requests.
  Issue #6 Richtigen Content-Type auf der Response bei remote requests zwischen Clients setzen